--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-links">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Categories</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -82,12 +82,12 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>Email: support@imagesearch.com</p>
+                <p>Email: msharma7744@gmail.com</p>
                 <p>Follow us on social media</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-facebook"></i></a>
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
